# Casino-Project

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
headers/: ColorOutput.h  bar.h  blackjack.h  card.h  drink.h  drinks.h  game.h  menumanager.h  player.h  roulette.h  runner.h  slots.h  visuals.h
readme/: MoneyPitCasino
src/: bar.cpp  blackjack.cpp  card.cpp  main.cpp  menumanager.cpp  player.cpp  roulette.cpp  runner.cpp  slots.cpp  visuals.cpp
test/: CMakeLists.txt  bartest.cpp  blackjacktest.cpp  roulettetest.cpp  runnertest.cpp  slotstest.cpp  test.cpp
